# v-diffusion-pytorch

./: .gitignore  .gitmodules  LICENSE  README.md  cfg_modify_image.py  cfg_predict.py  cfg_sample.py  clip_sample.py  cog.yaml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
diffusion/: __init__.py  sampling.py  utils.py
diffusion/models/: __init__.py  cc12m_1.py  danbooru_128.py  imagenet_128.py  models.py  wikiart_128.py  wikiart_256.py  yfcc_1.py  yfcc_2.py
