[metadata]
name = v-diffusion-pytorch
version = 0.0.2
author = Katherine Crowson
author_email = crowsonkb@gmail.com
url = https://github.com/crowsonkb/v-diffusion-pytorch
description = v objective diffusion inference code for PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires = 
    ftfy
    regex
    requests
    Pillow
    torch
    torchvision
    tqdm
